# akhiln

./: CNAME  README.md  codeblock.lua  index.html
.github/workflows/: static.yml
drafts/: components.js  footer-template.html  header-template.html  index.html  output.css  post1.html  post2.html  static-site-example.html
publish/: about.html  about.md  components.js  creating-an-index-for-text-files.html  global.css  index.html  index.md  input.css  is-async-rust-worthit.html  layout.html  myFooter.js  myHeader.js  output.css  post1.html  post2.html  projects.html  resume-fullstack.html  resume-without-shadows.html  resume-without-tailwind.html  resume.html  resume_cuda.html  resume_tailwind.html  search_component.js  static-site-example.html  tailwind.config.js  templates.html  webcomponents-over-frameworks.html
publish/blog/: index.html  is-async-rust-worthit.html  is-async-rust-worthit.md  webcomponents-over-frameworks.html  webcomponents-over-frameworks.md
publish/drafts/: article-template.html  components.js  ditching-async-in-rust.md  footer-template.html  global.css  header-template.html  index.html  myFooter.js  myHeader.js  post1.html  post2.html
publish/guide/: creating-a-http-webserver-is-easy.html  creating-dlc-contract.html  dlc-example.js  dlc-script.md  document-manipulation.html  index.html  simple_contract.sh  understand-sourcecode-commandline.html
publish/projects/: creating-an-index-for-text-files.html  data-analysis-tool.html  english-sample-sentences.md  english-vocabulary.md  index.html  (+9 more)
server/: Cargo.toml
server/src/: main.rs
(+2 files in other folders)
