[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "set-header"] }
include_dir = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.9"
mime_guess = "2.0"
log = { package = "loglib", path = "../../rust-crates/libs/loglib" }
command = { path = "../../rust-crates/libs/command" }
# httplib = { path = "../../rust-crates/httplib" } # Removed in favor of Axum


